--- a/default/app.conf
+++ b/default/app.conf
@@ -3,6 +3,9 @@ is_visible = 0
 label = slack
 
 [launcher]
+version = 1.0
+description = a splunk addon that enables users to easily send search results to slack
 
 [package]
+id = slackit
 check_for_updates = 1
